# QMAT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: bug.ma  bug.off
include/CGAL/: version.h
src/: GeometryObjects.cpp  GeometryObjects.h  Mesh.cpp  Mesh.h  NonManifoldMesh.cpp  NonManifoldMesh.h  PrimMesh.cpp  PrimMesh.h  SlabMesh.cpp  SlabMesh.h  Wm4Math.cpp  Wm4Math.h  Wm4Matrix.cpp  Wm4Matrix.h  Wm4Vector.cpp  Wm4Vector.h
